--- a/1.html
+++ b/1.html
@@ -58,7 +58,7 @@
     <body>
         <div>
         <span id="name" class="text">生日快乐</span><br>
-        <video src="./img/2021_10_18_23_23_IMG_2091.mp4" controls="controls" preload="auto">你的浏览器不支持video标签，尝试跟换浏览器</video><br>
+        <video src="./img/1.mp4" controls="controls" preload="auto">你的浏览器不支持video标签，尝试跟换浏览器</video><br>
         <a href="./BirthdayCake.html" id="qq" class="text" onclick="javascript:alert('为你跳转动画');">前往下一页</a>
     </div>
     </body>
