--- a/BirthdayCake.html
+++ b/BirthdayCake.html
@@ -172,7 +172,7 @@
 </svg>
 <div class="name" style="z-index: 100;">小张</div>
 <div class="happy" style="z-index: 100;">
-    <img src="img/HappyBirthday.png">
+    <img src="./img/HappyBirthday.png">
 </div>
 <div class="button-style1">
     <a href="Memories.html" class="lk1">
