--- a/Memories.html
+++ b/Memories.html
@@ -318,7 +318,7 @@
               <div class="ly-txt73">
                   <p>因为你怕我什么都没弄</p>
                   <p>不弄你会不高兴</p>
-                  <p>所以你给了我思路！然后我就弄了这个！<x style="color: red;;">希望你喜欢吧！</x></p>
+                  <p>所以你给了我思路！然后我就弄了这个！<x style="color: ;">希望你喜欢吧！</x></p>
               </div>
               <div class="ly-imgbox73">
                 <img class="ly-img73" src="">
